--- a/shopping-mall/package.json
+++ b/shopping-mall/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "prettier": "^2.6.2",
+    "sass": "^1.51.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.7"
   }
