--- a/shopping-mall/package.json
+++ b/shopping-mall/package.json
@@ -8,15 +8,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "graphql-request": "^4.2.0",
+    "graphql-tag": "^2.12.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-query": "^3.38.1",
     "react-router-dom": "^6.3.0",
+    "uuid": "^8.3.2",
     "vite-plugin-next-react-router": "^0.6.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
     "@vitejs/plugin-react": "^1.3.0",
@@ -24,9 +28,13 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
+    "msw": "^0.39.2",
     "prettier": "^2.6.2",
     "sass": "^1.51.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.7"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
